src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Acct_Row_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acct Row ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Reason_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Detailed Reason Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled by Visitor</fullName>
                </value>
                <value>
                    <fullName>Canceled (No Queue)</fullName>
                </value>
                <value>
                    <fullName>Canceled (No Agent)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Acct__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sponsor Acct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Page_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Web Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wex_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Wex Account #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Chats</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>IpAddress</columns>
        <columns>Location</columns>
        <columns>Platform</columns>
        <columns>Owner</columns>
        <columns>LiveChatButton</columns>
        <filterScope>Everything</filterScope>
        <label>All Chats</label>
    </listViews>
    <listViews>
        <fullName>Serv_Ops_WOLNP_Chat_LiveChatTranscript</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LiveChatButton</field>
            <operation>equals</operation>
            <value>Service Operations - WOLNP</value>
        </filters>
        <label>Serv Ops - WOLNP - Chat</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Shell_Inside_Sales_Chat_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Shell - Inside Sales - Chat</label>
        <queue>Shell_Inside_Sales_Chat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Shell_WOLNP_Chat_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Shell - WOLNP - Chat</label>
        <queue>Shell_WOLNP_Chat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>